--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,3 +1,22 @@
+:root {
+  --var--white-color: rgba(255, 255, 255, 1);
+  --var-body-bg: rgb(244, 240, 240);
+  --var--header-gradient: linear-gradient(
+    90deg,
+    rgba(13, 208, 186, 1) 35%,
+    rgba(42, 134, 229, 1) 100%
+  );
+  --var-header-color-menuItem: rgba(42, 134, 229, 1);
+  --var-header-bg-search: rgba(238, 238, 238, 1);
+  --var-header-color-search: rgba(117, 117, 117, 1);
+}
+[dark] {
+  --var-body-bg: rgba(14, 18, 25, 1);
+  --var-header-color-menuItem: rgba(13, 208, 186, 1);
+  --var-header-bg-search: rgba(24, 58, 93, 1);
+  --var-header-color-search: rgba(255, 255, 255, 1);
+}
+
 .conteiner {
   max-width: 1230px;
   margin: 0 auto;
@@ -6,11 +25,7 @@
 
 //* Top header nav
 .header {
-  background: linear-gradient(
-    90deg,
-    rgba(13, 208, 186, 1) 35%,
-    rgba(42, 134, 229, 1) 100%
-  );
+  background: var(--var--header-gradient);
 
   &__title {
     display: flex;
@@ -25,7 +40,7 @@
     justify-content: center;
     align-items: center;
     font-size: 14px;
-    color: white;
+    color: var(--var--white-color);
   }
 
   &__item {
@@ -77,7 +92,7 @@
   }
 
   &__link:hover {
-    box-shadow: 1px 1px 1px 1px #fff;
+    box-shadow: 1px 1px 1px 1px var(--var--white-color);
     transform: scale(1.1);
   }
 
@@ -85,7 +100,8 @@
     transform: scale(1.2);
   }
 
-  &__icon {
+  &__icon * {
+    fill: var(--var--white-color);
   }
 }
 
@@ -93,23 +109,34 @@
 .button__theme {
   width: 54px;
   height: 29px;
-  background-color: white;
+  background-color: var(--var--white-color);
   border-radius: 50px;
   text-align: left;
-
+  padding-left: 3px;
   &:hover {
     cursor: pointer;
   }
 
   &.is-open {
     text-align: right;
+    background-color: var(--var-header-bg-search);
+    padding-right: 3px;
   }
 }
 .button__icon {
-  padding-left: 3px;
-  padding-right: 3px;
+  border-radius: 50%;
 }
 
+.button__blok.is-open {
+  width: 25px;
+  height: 25px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 12.5px;
+  background-color: var(--var--white-color);
+  margin-left: 23px;
+}
 //*Botton header nav
 
 .nav {
@@ -136,7 +163,7 @@
   }
 
   &__link {
-    color: #2a86e5;
+    color: var(--var-header-color-menuItem);
     font-weight: 500;
     font-size: 18px;
   }
@@ -146,7 +173,7 @@
   display: flex;
   align-items: center;
   margin-left: auto;
-  background-color: #eee;
+  background-color: var(--var-header-bg-search);
   border-radius: 38px;
 
   &__label {
@@ -154,7 +181,7 @@
   }
   &__input {
     margin: 11px auto 11px 21px;
-    color: #757575;
+    color: var(--var-header-color-search);
     font-size: 16px;
   }
   &__button:active {
