--- a/src/styles/common.css
+++ b/src/styles/common.css
@@ -1,4 +1,4 @@
 body {
-  font-family: "Red Hat Display", sans-serif;
+  font-family: 'Red Hat Display', sans-serif;
   background: var(--var-body-bg);
 }
