--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,3 +1,6 @@
+$breakpoint_xl: 1170px;
+$breakpoint_md: 767px;
+$breakpoint_sm: 380px;
 :root {
   --var--white-color: rgba(255, 255, 255, 1);
   --var-body-bg: rgb(244, 240, 240);
@@ -18,20 +21,43 @@
 }
 
 .conteiner {
-  max-width: 1230px;
+  max-width: 1200px;
   margin: 0 auto;
-  padding: 0 30px;
+  padding: 0 15px;
 }
 
 //* Top header nav
 .header {
-  background: var(--var--header-gradient);
+  background: linear-gradient(
+    90deg,
+    rgba(13, 208, 186, 1) 35%,
+    rgba(42, 134, 229, 1) 100%
+  );
 
   &__title {
     display: flex;
     justify-content: space-between;
     align-items: center;
     max-height: 50px;
+
+    @media screen and (min-width: $breakpoint_md) and (max-width: $breakpoint_xl) {
+      & {
+        max-width: 720px;
+        position: relative;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+      }
+    }
+    @media screen and (min-width: $breakpoint_sm) and (max-width: $breakpoint_md) {
+      & {
+        max-width: 350px;
+        position: relative;
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+      }
+    }
   }
 
   &__list {
@@ -41,6 +67,12 @@
     align-items: center;
     font-size: 14px;
     color: var(--var--white-color);
+
+    @media screen and (min-width: 0) and (max-width: $breakpoint_md) {
+      & {
+        display: none;
+      }
+    }
   }
 
   &__item {
@@ -60,12 +92,6 @@
       transform: scale(1.2);
     }
   }
-
-  &__icon {
-  }
-
-  &__text {
-  }
 }
 
 //* Social Nav
@@ -74,7 +100,16 @@
   justify-content: center;
   align-items: center;
   margin: 16px 0px;
-
+  @media screen and (min-width: $breakpoint_sm) and (max-width: $breakpoint_md) {
+    & {
+      width: 100%;
+      height: 50px;
+      position: relative;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+    }
+  }
   &__items {
     display: flex;
     justify-content: center;
@@ -113,6 +148,12 @@
   border-radius: 50px;
   text-align: left;
   padding-left: 3px;
+
+  @media screen and (min-width: $breakpoint_sm) and (max-width: $breakpoint_md) {
+    & {
+      margin-left: 96px;
+    }
+  }
   &:hover {
     cursor: pointer;
   }
@@ -125,6 +166,9 @@
 }
 .button__icon {
   border-radius: 50%;
+}
+.button__blok {
+  transition: margin 0.2s;
 }
 
 .button__blok.is-open {
@@ -143,6 +187,28 @@
   height: 110px;
   display: flex;
   align-items: center;
+  @media screen and (min-width: $breakpoint_md) and (max-width: $breakpoint_xl) {
+    & {
+      width: 720px;
+      height: 60px;
+      justify-content: space-between;
+      position: relative;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+    }
+  }
+  @media screen and (min-width: $breakpoint_sm) and (max-width: $breakpoint_md) {
+    & {
+      width: 380px;
+      height: 60px;
+      justify-content: space-between;
+      position: relative;
+      left: 0;
+      right: 0;
+      margin: 0 auto;
+    }
+  }
 
   &__logo {
     width: 134px;
@@ -152,6 +218,11 @@
 
   &__site {
     display: flex;
+    @media screen and (min-width: 0) and (max-width: $breakpoint_xl) {
+      & {
+        display: none;
+      }
+    }
   }
 
   &__items {
@@ -175,7 +246,11 @@
   margin-left: auto;
   background-color: var(--var-header-bg-search);
   border-radius: 38px;
-
+  @media screen and (min-width: 0px) and (max-width: $breakpoint_xl) {
+    & {
+      display: none;
+    }
+  }
   &__label {
     display: flex;
   }
@@ -194,19 +269,27 @@
   }
 }
 
-@media (max-width: 927px) {
-  .nav__items {
-    margin-right: 20px;
+.modalHeaderButton {
+  &:active {
+    transform: scale(1.1);
   }
-  .nav__items:first-child {
-    margin-right: 20px;
+  @media screen and (min-width: $breakpoint_xl) {
+    & {
+      display: none;
+    }
   }
-  .nav__items:last-child {
-    margin-right: 20px;
+
+  @media screen and (min-width: $breakpoint_sm) and (max-width: $breakpoint_md) {
+    & {
+      margin-right: 28px;
+    }
   }
-}
-@media (max-width: 844px) {
-  .nav__input {
-    width: 100px;
+  &__icon {
+    width: 26px;
+    height: 22px;
+    margin-left: 10px;
+  }
+  &__icon * {
+    fill: rgba(42, 134, 229, 1);
   }
 }
