--- a/src/components/Modal/Modal.css
+++ b/src/components/Modal/Modal.css
@@ -16,7 +16,7 @@
   max-width: 730px;
   width: 100%;
   padding: 12px;
-  background-color: #fff;
+  background-color: #383737;
   border-radius: 3px;
   box-shadow:
     0px 2px 1px -1px rgba(0, 0, 0, 0.2),
